# ds-common-aws-rs-lib

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yaml  docs.yaml  publish.yaml  release.yaml  tests.yaml
examples/: get_queue_name.rs  get_ssm_parameter.rs  s3_get_object.rs  s3_put_object.rs
src/: client.rs  error.rs  lib.rs
src/s3/: error.rs  mod.rs
src/sqs/: error.rs  mod.rs
src/ssm/: error.rs  mod.rs
tests/: integration_tests.rs  panic_handling.rs  thread_safety.rs
