[package]
name = "ds-common-aws-rs-lib"
version = "0.2.1"
edition = "2021"
rust-version = "1.76.0"
description = "A comprehensive Rust library for AWS services integration, providing high-level abstractions for AWS SDK operations with common utilities and error handling"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/grasp-labs/ds-common-aws-rs-lib"
documentation = "https://docs.rs/ds-common-aws-rs-lib"
keywords = ["aws", "sdk", "utilities", "ssm", "sqs"]
categories = ["api-bindings"]

[features]
default = ["full"]
ssm = ["aws-sdk-ssm"]
sqs = ["aws-sdk-sqs"]
s3 = ["aws-sdk-s3"]
full = ["ssm", "sqs", "s3"]

[dependencies]
aws-config = "1.8.1"
aws-sdk-ssm = { version = "1.83.0", optional = true }
aws-sdk-sqs = { version = "1.39.0", optional = true }
aws-sdk-s3 = { version = "1.67.0", optional = true }
aws-smithy-runtime-api = "1"

thiserror = "2.0.16"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
